--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
     <footer class="mdl-mini-footer">
       <div class="mdl-mini-footer__left-section">
         <button id="skip" value="skip"
-          class="mdl-mini-footer__social-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">skip</button>
+          class="mdl-mini-footer__social-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">skip</button>
       </div>
       <div class="mdl-mini-footer__right-section">
         <button id="no" value="no"
