--- a/public/images.html
+++ b/public/images.html
@@ -7,6 +7,16 @@
     <title>Images</title>
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-blue.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143509730-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-143509730-1');
+  </script>
     <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
     <style>
         .row {
