--- a/public/upload.html
+++ b/public/upload.html
@@ -20,7 +20,16 @@ limitations under the License.
   <meta charset=utf-8 />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Upload</title>
-
+<!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143509730-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-143509730-1');
+  </script>
   <!-- Material Design Theming -->
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-blue.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
